refactor: change app114

--- a/app/styles/_right_messages.scss
+++ b/app/styles/_right_messages.scss
@@ -154,11 +154,11 @@
         .chat_header {
             height: auto;
             margin-right: 0;
-            padding: 0;
+            padding-bottom: 20px;
         }
 
         .chat_main {
-            padding-top: 63px;
+            padding-top: 43px;
             padding-left: 22px;
             padding-right: 22px;
             max-height: 680px;
