refactor: change app116

--- a/app/styles/_right_messages.scss
+++ b/app/styles/_right_messages.scss
@@ -154,7 +154,7 @@
         .chat_header {
             height: auto;
             margin-right: 0;
-            padding-bottom: 0 0 20px 0;
+            padding: 0 0 20px 0;
         }
 
         .chat_main {
