--- a/app/styles/_right_messages.scss
+++ b/app/styles/_right_messages.scss
@@ -158,7 +158,7 @@
         }
 
         .chat_main {
-            padding-top: 43px;
+            padding-top: 46px;
             padding-left: 22px;
             padding-right: 22px;
             max-height: 655px;
@@ -199,6 +199,7 @@
         .write_message {
             margin: 0 !important;
             padding: 15px 0 15px 0 !important;
+            height: 72px;
 
             .input-group {
 
