refactor: change app121

--- a/app/styles/_right_messages.scss
+++ b/app/styles/_right_messages.scss
@@ -192,6 +192,10 @@
                     .chat_text {
                         padding-right: 17px;
                     }
+                    .chat_status {
+                        margin-top: 11px;
+                        padding-top: 2px;
+                    }
                 }
 
             }
