refactor: change app123

--- a/app/styles/_right_messages.scss
+++ b/app/styles/_right_messages.scss
@@ -191,10 +191,13 @@
 
                     .chat_text {
                         padding-right: 17px;
+                        color: rgba(108, 117, 125, 1);
+                        ;
                     }
                     .chat_status {
                         margin-top: 9px;
                         padding-top: 4px;
+                        color: rgba(108, 117, 125, 1);
                     }
                 }
 
