--- a/app/includes/right_messages-1.pug
+++ b/app/includes/right_messages-1.pug
@@ -6,29 +6,29 @@
                 li.chat_name Вениамин Редакторович
                 li.chat_status Онлайн
         .chat_main
-            .answer
+            .answer.color-text-s
                 img(src="images/src/avatar_4.jpg", alt="logo-owner")
                 ul
                     li.chat_name Вениамин Редакторович
                     li.chat_text Да, я уже вышел и минут через 20-30 буду у тебя. Поеду на трамвае и потом в магазин. Тебе что-то захватить?
                     li.chat_status 8 минут назад
-            .chat_message
+            .chat_message.color-text-l
                 img(src="images/src/avatar_1.jpg", alt="logo-owner")
                 ul
                     li.chat_text Захвати мне колы и пару печенек. Как-то очень сладкого хочется, а в магазин идти лень
                     li.chat_status 5 минут назад
-            .answer
+            .answer.color-text-s
                 img(src="images/src/avatar_4.jpg", alt="logo-owner")
                 ul
                     li.chat_name Вениамин Редакторович
                     li.chat_text Лады
                     li.chat_status 5 минут назад
-            .chat_message
+            .chat_message.color-text-l
                 img(src="images/src/avatar_1.jpg", alt="logo-owner")
                 ul
                     li.chat_text А, слушай, купи мне ещё Macbook Pro. А то хочется работать в Хекслете, а там это условие
                     li.chat_status 3 минут назад
-            .answer
+            .answer.color-text-s
                 img(src="images/src/avatar_4.jpg", alt="logo-owner")
                 ul
                     li.chat_name Вениамин Редакторович
