--- a/app/styles/_right_messages.scss
+++ b/app/styles/_right_messages.scss
@@ -155,6 +155,10 @@
             height: auto;
             margin-right: 0;
             padding: 0 0 20px 5px;
+
+            ul {
+                margin: auto 0 auto 20px;
+            }
         }
 
         .chat_main {
