--- a/app/styles/_utilities.scss
+++ b/app/styles/_utilities.scss
@@ -1,3 +1,11 @@
 .radius-top-left {
     border-top-left-radius: 1rem;
 }
+.color-text-s {
+    color: rgba(108, 117, 125, 1);
+}
+.color-text-l {
+    color: rgba(251, 251, 251, 1)
+}
+
+
