refactor: change app126

--- a/app/styles/_right_messages.scss
+++ b/app/styles/_right_messages.scss
@@ -154,10 +154,10 @@
         .chat_header {
             height: auto;
             margin-right: 0;
-            padding: 0 0 20px 5px;
+            padding: 0 0 20px 0;
 
             ul {
-                margin: auto 0 auto 20px;
+                margin: auto 0 auto 13px;
             }
         }
 
