--- a/app/includes/right_messages-1.pug
+++ b/app/includes/right_messages-1.pug
@@ -16,7 +16,7 @@
                 img(src="images/src/avatar_1.jpg", alt="logo-owner")
                 ul
                     li.chat_text Захвати мне колы и пару печенек. Как-то очень сладкого хочется, а в магазин идти лень
-                    li.chat_status 5 минут назад
+                    li.chat_status.color-text-g 5 минут назад
             .answer.color-text-s
                 img(src="images/src/avatar_4.jpg", alt="logo-owner")
                 ul
@@ -27,7 +27,7 @@
                 img(src="images/src/avatar_1.jpg", alt="logo-owner")
                 ul
                     li.chat_text А, слушай, купи мне ещё Macbook Pro. А то хочется работать в Хекслете, а там это условие
-                    li.chat_status 3 минут назад
+                    li.chat_status.color-text-g 3 минут назад
             .answer.color-text-s
                 img(src="images/src/avatar_4.jpg", alt="logo-owner")
                 ul
