refactor: change app128

--- a/app/includes/right_messages-1.pug
+++ b/app/includes/right_messages-1.pug
@@ -1,4 +1,4 @@
-.left.dialog.tab-pane.h-85.bg-white.p-4(id="current-chat" role="tabpanel" aria-labelledby="current-chat-tab")
+.left.dialog.tab-pane.h-85.bg-white(id="current-chat" role="tabpanel" aria-labelledby="current-chat-tab")
     .right_messages
         .chat_header.w-100
             img(src="images/src/avatar_4.jpg", alt="logo-veniamin")
