--- a/app/styles/_right_messages.scss
+++ b/app/styles/_right_messages.scss
@@ -154,7 +154,7 @@
         .chat_header {
             height: auto;
             margin-right: 0;
-            padding: 0 0 22px 0;
+            padding: 0 0 19px 0;
 
             ul {
                 margin: auto 0 auto 18px;
@@ -163,7 +163,7 @@
 
         .chat_main {
             padding-top: 46px;
-            padding-left: 25px;
+            padding-left: 27px;
             padding-right: 25px;
             max-height: 655px;
             .answer {
@@ -211,7 +211,7 @@
         }
         .write_message {
             margin: 0 !important;
-            padding: 15px 5px 15px 10px !important;
+            padding: 15px 0 15px 15px !important;
             height: 67px;
             width: 370px;
 
