refactor: change app131

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -27,7 +27,7 @@ body {
 .dialog {
     display: none;
     height: 896px;
-    padding: 1.5rem 1rem;
+    padding: 22px 1rem;
 }
 .contacts {
     display: none;
