refactor: change app134

--- a/app/includes/header-1.pug
+++ b/app/includes/header-1.pug
@@ -7,10 +7,10 @@ header.header.radius-top-left.h-15.bg-primary
                 a(href="#current-chat").nav-link#current-chat-tab(data-bs-toggle="tab" data-bs-target="#current-chat" type="button" role="tab" aria-controls="current-chat" aria-selected="false")
                     img(src="images/src/chat_left.png", alt="profile")
             li.list_item.people(role="presentation")
-                a(href="#contacts").active#contacts-tab(data-bs-toggle="tab" data-bs-target="#contacts" type="button" role="tab" aria-controls="contacts" aria-selected="true")
+                a(href="#contacts").nav-link#contacts-tab(data-bs-toggle="tab" data-bs-target="#contacts" type="button" role="tab" aria-controls="contacts" aria-selected="true")
                     img(src="images/src/people_2.png", alt="contacts")
             li.list_item.chat(role="presentation")
-                a(href="#chats").nav-link#chats-tab(data-bs-toggle="tab" data-bs-target="#chats" type="button" role="tab" aria-controls="chats" aria-selected="false")
+                a(href="#chats").active#chats-tab(data-bs-toggle="tab" data-bs-target="#chats" type="button" role="tab" aria-controls="chats" aria-selected="false")
                     img(src="images/src/chat_2.png", alt="masseges")
             li.list_item.person(role="presentation")
                 a(href="#profile").nav-link#profile-tab(data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false")
