refactor: change app148

--- a/app/scss/styles/_variables.scss
+++ b/app/scss/styles/_variables.scss
@@ -1,4 +1,4 @@
-@media screen and (mшт-width: 415px) {
+@media screen and (min-width: 415px) {
     $grays: (
       "100": $gray-100,
       "200": $gray-200,
