--- a/app/scss/styles/_variables.scss
+++ b/app/scss/styles/_variables.scss
@@ -1,4 +1,4 @@
-/*  111    */
+/*
 $grays: (
       "100": $gray-100,
       "200": $gray-200,
@@ -10,3 +10,7 @@ $grays: (
       "800": $gray-800,
       "900": $gray-900
     )
+*/
+body {
+  width: 1000px;
+}
